--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+###> .idea ###
+/.idea/
+###< .idea ###
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -9,11 +12,6 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
-###> phpunit/phpunit ###
-/phpunit.xml
-.phpunit.result.cache
-###< phpunit/phpunit ###
-
 ###> symfony/phpunit-bridge ###
 .phpunit.result.cache
 /phpunit.xml
@@ -23,3 +21,8 @@
 /public/assets/
 /assets/vendor
 ###< symfony/asset-mapper ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
