--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,11 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "lint": [
+            "./vendor/bin/php-cs-fixer fix -vvv --show-progress=dots",
+            "./vendor/bin/rector --dry-run",
+            "./vendor/bin/phpstan"
         ]
     },
     "conflict": {
@@ -95,7 +100,10 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.46",
+        "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.18.13",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/debug-bundle": "7.0.*",
