update: add order and payment and functional for create and get

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,9 @@
 parameters:
 
 services:
+    App\Modules\Payment\Entity\PaymentType:
+        tags:
+            - { name: doctrine.dbal.type, alias: payment_type_enum }
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
